.metals/.reports/metals/r_scala-toplevel-mtags_1691601327873
id: file://<WORKSPACE>/src/main/scala/gcd/lab2/task1.scala:[163..163) in Input.VirtualFile("file://<WORKSPACE>/src/main/scala/gcd/lab2/task1.scala", "package Lab2
import chisel3 . _
class LM_IO_Interface extends Bundle {
    val s0 = Input(Bool())
    val s0 = Input(Bool())
    val s0 = Input(Bool())
}

class 

")
file://<WORKSPACE>/src/main/scala/gcd/lab2/task1.scala:11: error: expected identifier; obtained eof

^